# NeuroArt

./: .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
apps/server/: main.py  package.json  pyproject.toml  requirements.txt  workflow.json
apps/server/libs/: README.md  agents.py  build_worflow.py
apps/server/libs/workflow_templates/: img2img.template  txt2img.template
apps/server/models/: models.py
apps/server/routes/: auth.py  generate.py
apps/server/utils/: helpers.py
apps/web/: package.json  store.ts
apps/web/app/: page.tsx
apps/web/components/: HeroSection.tsx  ImagePreview.tsx  NavigationBar.tsx  SettingsPanel.tsx
neuroart/: package.json
neuroart/apps/backend/: Dockerfile  main.py  requirements.txt
neuroart/apps/backend/models/: models.py
neuroart/apps/web/: Dockerfile
