[project]
name = "server"
version = "0.1.0"
description = "The backend for NeuroArt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers>=0.32.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "logfire>=3.11.0",
    "mem0ai>=0.1.81",
    "orjson>=3.10.16",
    "pydantic>=2.11.1",
    "pydantic-ai[logfire]>=0.0.46",
    "python-dotenv>=1.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
